--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - 3D Card | Nothing4us</title>
+    <title>3D cards</title>
     <link rel="stylesheet" href="index.css">
 
 </head>
